# taomly

./: .env.example  .gitignore  .pre-commit-config.yaml  API.md  ARCHITECTURE.md  ARCHITECTURE_DIAGRAM.md  BUYER_GUIDE.md  CHANGELOG.md  DEPLOYMENT.md  Dockerfile  KNOWN_LIMITATIONS.md  LICENSE  MIGRATION_badges.sql  README.md  ROADMAP_STAGE1.md  SECURITY.md  STAGE_1_COMPLETE.md  VALUATION.md  WHATS_INCLUDED.md  ai_service.py  alembic.ini  api.py  auth.py  config.py  database.py  docker-compose.yml  handlers.py  limiter.py  models.py  pyproject.toml  requirements.txt  schemas.py  telegram_service.py
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_add_badge_columns.py  0003_add_is_popular.py
routers/: agency.py  ai.py  analytics.py  billing.py  menu.py  orders.py  reservations.py  restaurants.py  superadmin.py  waiter_calls.py
routers/routers/: agency.py
static/: admin.html  agency_admin.html  index.html  manifest.json  offline.html  robots.txt  superadmin.html  sw.js
tests/: analytics.py  conftest.py  test_ai.py  test_auth.py  test_billing.py  test_branding.py  test_multi_tenant.py  test_orders.py  test_schemas.py
